<package>
  <name>costmap_generator</name>
  <version>0.0.1</version>
  <description>CostMap Generator Module for TEB Local Planner</description>
  <maintainer email="pkettava@andrew.cmu.edu">Prasanna Sriganesh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
</package>
